edit and delete functionality added

--- a/src/main/resources/example.application.properties
+++ b/src/main/resources/example.application.properties
@@ -1,2 +1,8 @@
 
 google.maps = YOUR_KEY
+
+spring.datasource.url=jdbc:mysql://localhost/adlister_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=spring_user
+spring.datasource.password=p@$$w0rd
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
